// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`stepRouteStoneSet given: [case6] a stance-only flag on a non-stance --as when: [t0] --as passed --severity urgent then: refuses, and names the stray flag 1`] = `
"BadRequestError: --severity is only accepted for --as disputed | conceded

you passed --as passed, which takes no absorption flags.

to absorb a concern:
  --as conceded --with <reviewer> --about <concern> --severity better|urgent
  --as disputed --with <reviewer> --about <concern> --why <fulcrum-path>

{
  "stone": "1.vision",
  "as": "passed",
  "flag": "--severity"
}"
`;

exports[`stepRouteStoneSet given: [case6] a stance-only flag on a non-stance --as when: [t1] --as passed --why some/path then: refuses, and names --why 1`] = `
"BadRequestError: --why is only accepted for --as disputed | conceded

you passed --as passed, which takes no absorption flags.

to absorb a concern:
  --as conceded --with <reviewer> --about <concern> --severity better|urgent
  --as disputed --with <reviewer> --about <concern> --why <fulcrum-path>

{
  "stone": "1.vision",
  "as": "passed",
  "flag": "--why"
}"
`;

exports[`stepRouteStoneSet given: [case6] a stance-only flag on a non-stance --as when: [t2] --as approved --with architect then: refuses, and names --with 1`] = `
"BadRequestError: --with is only accepted for --as disputed | conceded

you passed --as approved, which takes no absorption flags.

to absorb a concern:
  --as conceded --with <reviewer> --about <concern> --severity better|urgent
  --as disputed --with <reviewer> --about <concern> --why <fulcrum-path>

{
  "stone": "1.vision",
  "as": "approved",
  "flag": "--with"
}"
`;

exports[`stepRouteStoneSet given: [case7] a stance with an absent --with or --about when: [t0] --as disputed with no --with then: refuses, and names --with — pinned whole 1`] = `
"BadRequestError: --with is required for --as disputed

{
  "stone": "1.vision"
}"
`;

exports[`stepRouteStoneSet given: [case7] a stance with an absent --with or --about when: [t1] --as conceded with no --about then: refuses, and names --about — pinned whole 1`] = `
"BadRequestError: --about is required for --as conceded

a stance answers ONE concern, so it must name which:
  --about blocker.1   --about nitpick.4

{
  "stone": "1.vision"
}"
`;
